# codeql

./: .bazelrc  .gitattributes  .gitignore  BUILD.bazel  MODULE.bazel
.github/workflows/: codeql-analysis.yml  csharp-qltest.yml
cpp/autobuilder/Semmle.Autobuild.Cpp/: Semmle.Autobuild.Cpp.csproj
cpp/autobuilder/Semmle.Autobuild.Cpp.Tests/: Semmle.Autobuild.Cpp.Tests.csproj
csharp/: .gitignore  paket.main.bzl  update-deps.sh
csharp/autobuilder/Semmle.Autobuild.CSharp/: BUILD.bazel  Semmle.Autobuild.CSharp.csproj
csharp/autobuilder/Semmle.Autobuild.CSharp.Tests/: Semmle.Autobuild.CSharp.Tests.csproj
csharp/autobuilder/Semmle.Autobuild.Shared/: Semmle.Autobuild.Shared.csproj
csharp/extractor/Semmle.Extraction/: BUILD.bazel  Semmle.Extraction.csproj
csharp/extractor/Semmle.Extraction.CSharp/: Semmle.Extraction.CSharp.csproj
csharp/extractor/Semmle.Extraction.CSharp.DependencyFetching/: BUILD.bazel  Semmle.Extraction.CSharp.DependencyFetching.csproj
csharp/extractor/Semmle.Extraction.CSharp.DependencyStubGenerator/: Semmle.Extraction.CSharp.DependencyStubGenerator.csproj
csharp/extractor/Semmle.Extraction.CSharp.Driver/: Semmle.Extraction.CSharp.Driver.csproj
csharp/extractor/Semmle.Extraction.CSharp.Standalone/: Semmle.Extraction.CSharp.Standalone.csproj
csharp/extractor/Semmle.Extraction.CSharp.StubGenerator/: BUILD.bazel  Semmle.Extraction.CSharp.StubGenerator.csproj
csharp/extractor/Semmle.Extraction.CSharp.Util/: Semmle.Extraction.CSharp.Util.csproj
csharp/extractor/Semmle.Util.Tests/: BUILD.bazel  Semmle.Util.Tests.csproj
(+11 files in other folders)
