load(
    "//misc/bazel:csharp.bzl",
    "codeql_csharp_library",
)

codeql_csharp_library(
    name = "Semmle.Extraction",
    srcs = glob([
        "Entities/**/*.cs",
        "Extractor/**/*.cs",
        "*.cs",
    ]),  # TODO debug constants
    visibility = ["//csharp:__subpackages__"],
    deps = [
        "//csharp/extractor/Semmle.Util",
        # "@paket.main//gitinfo",
        # "@paket.main//thisassembly.git",
        "@paket.main//microsoft.build",
        "@paket.main//microsoft.codeanalysis",
    ],
)
