# csharp_test(
#     name = "Semmle.Util.Tests",
#     srcs = glob([
#         "**/*.cs",
#     ]),
#     nullable = "enable",
#     target_frameworks = ["net8.0"],
#     deps = [
#         "//csharp/extractor/Semmle.Util",
#         "@paket.main//microsoft.net.test.sdk",
#         "@paket.main//newtonsoft.json",
#         "@paket.main//xunit",
#         "@paket.main//xunit.runner.visualstudio",
#     ],
# )
